--- a/Inlupp2/Inlupp2Test/Inlupp2Test.vcxproj
+++ b/Inlupp2/Inlupp2Test/Inlupp2Test.vcxproj
@@ -39,7 +39,8 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Queue.cpp" />
+    <ClCompile Include="LinkedListTest.cpp" />
+    <ClCompile Include="QueueTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
