--- a/Inlupp2/Inlupp2/Inlupp2.vcxproj.filters
+++ b/Inlupp2/Inlupp2/Inlupp2.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
