--- a/Inlupp2/Inlupp2Test/Inlupp2Test.vcxproj
+++ b/Inlupp2/Inlupp2Test/Inlupp2Test.vcxproj
@@ -48,6 +48,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="stackTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Inlupp2\Inlupp2.vcxproj">
