--- a/Inlupp2/Inlupp2/Inlupp2.vcxproj
+++ b/Inlupp2/Inlupp2/Inlupp2.vcxproj
@@ -115,6 +115,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DoubleLinkedList.h" />
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
