--- a/Inlupp2/Inlupp2/Inlupp2.vcxproj.filters
+++ b/Inlupp2/Inlupp2/Inlupp2.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DoubleLinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
